--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -69,6 +69,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
       gap: 10px;
+      margin-bottom: 30px;
     }
     .timeslot-button {
       padding: 10px;
@@ -86,6 +87,55 @@
       background: #4caf50;
       color: #fff;
       border-color: #388e3c;
+    }
+
+    .booking-details {
+      display: none;
+      border: 1px solid #ccc;
+      padding: 20px;
+      border-radius: 5px;
+      background: #fafafa;
+      margin-bottom: 30px;
+    }
+    .booking-details h3 {
+      margin-top: 0;
+      color: #4caf50;
+    }
+    .booking-details label {
+      display: block;
+      margin: 15px 0 5px;
+      font-weight: bold;
+    }
+    .booking-details select,
+    .booking-details input {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .booking-details .note {
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: 10px;
+    }
+
+    .submit-button {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .submit-button button {
+      padding: 10px 20px;
+      background: #4caf50;
+      border: none;
+      color: #fff;
+      font-size: 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+    .submit-button button:hover {
+      background: #388e3c;
     }
 
     footer {
@@ -132,7 +182,44 @@
     </div>
 
     <div id="timeslots" class="timeslots-container">
-      <!-- Tutaj zostaną wygenerowane przyciski z godzinami -->
+      <!-- Przyciski z godzinami wygenerowane dynamicznie -->
+    </div>
+
+    <div id="booking-details" class="booking-details">
+      <h3>Uzupełnij szczegóły wizyty</h3>
+
+      <!-- 1. Wybór zwierzaka -->
+      <label for="pet-select">Wybierz zwierzaka</label>
+      <select id="pet-select">
+        <!-- Opcje będą wygenerowane dynamicznie -->
+      </select>
+      <div class="note">
+        Jeśli nie masz jeszcze dodanego zwierzaka, <a href="konto.html#dodaj-zwierzaka">dodaj go w Moje Konto</a>.
+      </div>
+
+      <!-- 2. Rodzaj wizyty -->
+      <label for="visit-type">Rodzaj wizyty</label>
+      <select id="visit-type">
+        <!-- Przykładowe typy wizyt z atrybutem data-duration (w minutach) -->
+        <option value="" disabled selected>Wybierz rodzaj wizyty</option>
+        <option value="kontrola" data-duration="20">Kontrola (20 min)</option>
+        <option value="szczepienie" data-duration="30">Szczepienie (30 min)</option>
+        <option value="zabieg" data-duration="120">Zabieg (120 min)</option>
+      </select>
+
+      <!-- 3. Wybór lekarza -->
+      <label for="doctor-select">Wybierz lekarza</label>
+      <select id="doctor-select">
+        <option value="" disabled selected>Wybierz lekarza</option>
+        <!-- Opcje będą filtrowane na podstawie gatunku wybranego zwierzaka -->
+      </select>
+      <div class="note">
+        Lista lekarzy pokazuje tylko tych, którzy zajmują się wybranym gatunkiem.
+      </div>
+
+      <div class="submit-button">
+        <button id="confirm-appointment">Potwierdź wizytę</button>
+      </div>
     </div>
   </div>
 
@@ -183,14 +270,15 @@
         linkRejestracja.style.display = "none";
         linkLogowanie.style.display = "none";
         linkKonto.style.display = "inline-block";
+        // TODO: pobierz listę zwierzaków użytkownika z bazy i ustaw w pet-select
       } else {
-        // Użytkownik nie zalogowany → przekieruj na logowanie
+        // Użytkownik nie jest zalogowany → przekieruj na logowanie
         window.location.href = "login.html";
       }
     });
   </script>
 
-  <!-- Skrypt do obsługi wyboru daty i generowania godzin -->
+  <!-- Skrypt do obsługi wyboru daty, godzin i szczegółów wizyty -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       // 1. Odczyt parametru "lokal" z URL
@@ -220,7 +308,83 @@
         },
       });
 
-      // 3. Funkcja generująca przyciski z godzinami co 20 minut (8:00–17:40)
+      // Tablica przykładowych zwierzaków (w praktyce pobrać z Firebase)
+      const pets = [
+        { id: "p1", name: "Azor", species: "pies" },
+        { id: "p2", name: "Mruczek", species: "kot" },
+        { id: "p3", name: "Burek", species: "pies" }
+      ];
+
+      // Tablica przykładowych lekarzy z obsługiwanymi gatunkami
+      const doctors = [
+        { id: "d1", name: "dr Kowalski", species: ["pies", "kot"] },
+        { id: "d2", name: "dr Nowak", species: ["ptak", "gryzoń"] },
+        { id: "d3", name: "dr Wiśniewski", species: ["pies"] }
+      ];
+
+      // 3. Wypełnienie listy zwierzaków po załadowaniu (lub później po pobraniu z bazy)
+      const petSelect = document.getElementById("pet-select");
+      function populatePetSelect() {
+        // Najpierw czyścimy wszystkie opcje
+        petSelect.innerHTML = "";
+
+        // Dodajemy placeholder
+        const placeholder = document.createElement("option");
+        placeholder.value = "";
+        placeholder.textContent = "Wybierz zwierzaka";
+        placeholder.disabled = true;
+        placeholder.selected = true;
+        petSelect.appendChild(placeholder);
+
+        pets.forEach((pet) => {
+          const option = document.createElement("option");
+          option.value = pet.id;
+          option.textContent = `${pet.name} (${pet.species})`;
+          option.dataset.species = pet.species;
+          petSelect.appendChild(option);
+        });
+
+        // Opcja dodania nowego zwierzaka w razie potrzeby
+        const addOption = document.createElement("option");
+        addOption.value = "new";
+        addOption.textContent = "Dodaj nowego zwierzaka";
+        petSelect.appendChild(addOption);
+      }
+      populatePetSelect();
+
+      // 4. Obsługa zmiany wyboru zwierzaka (filtracja lekarzy)
+      const doctorSelect = document.getElementById("doctor-select");
+      petSelect.addEventListener("change", () => {
+        const selectedPetId = petSelect.value;
+        // Jeżeli użytkownik wybrał "Dodaj nowego zwierzaka"
+        if (selectedPetId === "new") {
+          window.location.href = "konto.html#dodaj-zwierzaka";
+          return;
+        }
+        const selectedOption = petSelect.selectedOptions[0];
+        const species = selectedOption.dataset.species;
+
+        // Czyścimy poprzednie opcje lekarzy
+        doctorSelect.innerHTML = "";
+        const placeholderDoc = document.createElement("option");
+        placeholderDoc.value = "";
+        placeholderDoc.textContent = "Wybierz lekarza";
+        placeholderDoc.disabled = true;
+        placeholderDoc.selected = true;
+        doctorSelect.appendChild(placeholderDoc);
+
+        // Dodajemy tylko lekarzy obsługujących ten sam gatunek
+        doctors.forEach((doc) => {
+          if (doc.species.includes(species)) {
+            const option = document.createElement("option");
+            option.value = doc.id;
+            option.textContent = doc.name;
+            doctorSelect.appendChild(option);
+          }
+        });
+      });
+
+      // 5. Funkcja generująca przyciski z godzinami co 20 minut (8:00–17:40)
       function generateTimeSlots(dateStr) {
         // Czyścimy poprzednie przyciski
         const container = document.getElementById("timeslots");
@@ -235,7 +399,7 @@
         let slots = [];
         for (let h = startHour; h < endHour; h++) {
           for (let m = 0; m < 60; m += intervalMinutes) {
-            // Jeśli godzina h=17 i m=40, to slot 17:40 → kończy się 18:00
+            // Jeżeli godzina h=17 i m=40, to slot 17:40 → kończy się 18:00
             if (h === endHour - 1 && m > 40) break;
             const hourStr = String(h).padStart(2, "0");
             const minStr = String(m).padStart(2, "0");
@@ -255,17 +419,63 @@
               .querySelectorAll(".timeslot-button.selected")
               .forEach((el) => el.classList.remove("selected"));
 
-            // Zaznaczamy wybrany
+            // Zaznaczamy wybrany przycisk
             btn.classList.add("selected");
 
-            // Tutaj można dodać dalszą logikę (np. zapamiętać w pamięci lub przejście do kolejnego kroku)
-            console.log(
-              `Wybrano: Lokal ${lokalParam}, data: ${dateStr}, godzina: ${time}`
-            );
+            // Pokazujemy sekcję z danymi do wypełnienia
+            document.getElementById("booking-details").style.display = "block";
+
+            // Przechowujemy wybraną datę i godzinę w zmiennych globalnych lub ukrytym polu
+            selectedDate = dateStr;
+            selectedTime = time;
+
+            // Ustawiamy pole notki, by użytkownik wiedział wybraną datę i czas
+            // (można dodać tu np. `<div>Wybrano: ${dateStr} ${time}</div>`)
           });
           container.appendChild(btn);
         });
       }
+
+      // 6. Obsługa potwierdzenia wizyty
+      const confirmButton = document.getElementById("confirm-appointment");
+      confirmButton.addEventListener("click", () => {
+        const petId = petSelect.value;
+        const visitTypeSelect = document.getElementById("visit-type");
+        const visitType = visitTypeSelect.value;
+        const duration = visitTypeSelect.selectedOptions[0]?.dataset.duration;
+        const doctorId = doctorSelect.value;
+
+        if (!petId || petId === "" || !visitType || !doctorId) {
+          alert("Proszę uzupełnić wszystkie pola.");
+          return;
+        }
+
+        // Przykładowe złożenie danych rezerwacji
+        const appointmentData = {
+          lokal: lokalParam,
+          date: selectedDate,
+          time: selectedTime,
+          petId: petId,
+          visitType: visitType,
+          duration: parseInt(duration, 10),
+          doctorId: doctorId
+        };
+
+        console.log("Dane rezerwacji:", appointmentData);
+
+        // TODO: Tutaj wyślij appointmentData do Firebase (lub innego backendu),
+        // aby zapisać wizytę w bazie i zarezerwować dany slot.
+        // Po pomyślnym zapisie można przekierować użytkownika na stronę podsumowania,
+        // np. window.location.href = "podsumowanie.html?appointmentId=...";
+
+        alert("Wizyta została zarejestrowana!"); 
+        // Możesz zamiast alertu przekierować np.:
+        // window.location.href = "podsumowanie.html";
+      });
+
+      // Zmienne do przechowywania wybranej daty i godziny
+      let selectedDate = "";
+      let selectedTime = "";
     });
   </script>
 </body>
