--- a/konto.html
+++ b/konto.html
@@ -172,12 +172,12 @@
   </header>
 
   <div class="container">
-    <div class="header-actions">
+<!--     <div class="header-actions">
       <div>
         <span id="user-greeting-top" style="font-size: 16px; font-weight: bold;"></span>
       </div>
       <button id="logout-button" class="logout-btn">Wyloguj</button>
-    </div>
+    </div> -->
 
     <h2 class="section-title">Mój Profil</h2>
     <!-- Formularz danych kontaktowych -->
