--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         <a href="#contact">Kontakt</a>
         <!-- „Moje Konto” zaczynamy od display: none; zostanie pokazane po zalogowaniu -->
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
+        <div class="header-actions">
+          <div>
+            <span id="user-greeting-top" style="font-size: 16px; font-weight: bold;"></span>
+          </div>
+        <button id="logout-button" class="logout-btn">Wyloguj</button>
+        </div>
       </nav>
     </div>
   </header>
