--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       color: #4CAF50;
       margin-bottom: 10px;
     }
+    .button{
+      color: #4CAF50;
+    }
     footer {
       background: #f4f4f4;
       padding: 20px 0;
@@ -89,7 +92,6 @@
         <a href="#contact">Kontakt</a>
         <!-- „Moje Konto” zaczynamy od display: none; zostanie pokazane po zalogowaniu -->
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
-<!--         <button id="logout-button" class="logout-btn">Wyloguj</button> -->
         <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
       </nav>
     </div>
