--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
       color: #4CAF50;
       margin-bottom: 10px;
     }
-    .button {
-  background-color: #ff0000; /* Czerwony kolor tła */
-  color: white;             /* Biały tekst dla lepszej czytelności */
-  border: none;             /* Usunięcie domyślnej ramki */
-  border-radius: 20px;      /* Zaokrąglenie rogów (im większa wartość, tym bardziej okrągły) */
-  padding: 10px 20px;       /* Wewnętrzny odstęp (góra/dół i lewo/prawo) */
-  cursor: pointer;          /* Zmiana kursora na wskaźnik przy najechaniu */
-}
-    .button:hover {
-  background-color: #cc0000; /* Ciemniejszy czerwony przy najechaniu */
+    .logout-btn {
+  background-color: #d9534f;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 8px 16px;
+  margin-left: 15px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
 }
 
-.button:active {
-  background-color: #990000; /* Jeszcze ciemniejszy po kliknięciu */
+.logout-btn:hover {
+  background-color: #c9302c;
 }
     footer {
       background: #f4f4f4;
