--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   color: white;
   border: none;
   border-radius: 20px;
-  padding: 8px 16px;
+/*   padding: 8px 16px; */
   margin-left: 15px;
   cursor: pointer;
   font-weight: bold;
