--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
         linkKonto.style.display = 'none';
       }
     });
+
+    logoutButton.addEventListener('click', async () => {
+      await signOut(auth);
+      window.location.href = "index.html";
+    });
+    
   </script>
 </body>
 </html>
