--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
        ================================= -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+    import { getAuth,signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
     // ------------------------------------------------------------
     // 1. Twoja konfiguracja Firebase – wklej dokładnie ten blok
