--- a/konto.html
+++ b/konto.html
@@ -40,17 +40,20 @@
       font-size: 14px;
     }
     .logout-btn {
-      background: #d9534f;
-      color: #fff;
+      background-color: #d9534f;
+      color: white;
       border: none;
-      padding: 6px 12px;
-      border-radius: 4px;
+      border-radius: 20px;
+      margin-left: 15px;
       cursor: pointer;
-      font-size: 14px;
-      margin-left: 10px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+      padding: 12px 24px;
+      font-size: 16px;
     }
+    
     .logout-btn:hover {
-      background: #c9302c;
+      background-color: #c9302c;
     }
     .container {
       max-width: 800px;
@@ -167,6 +170,7 @@
         <a href="#contact">Kontakt</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
+        <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
       </nav>
     </div>
   </header>
