--- a/konto.html
+++ b/konto.html
@@ -12,6 +12,32 @@
       background: #f7f7f7;
       color: #333;
     }
+    /* Dodaj te style w sekcji <style> */
+  .notification {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: white;
+    background-color: #4CAF50;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    z-index: 1000;
+    transition: all 0.5s ease;
+    opacity: 0;
+    transform: translateY(-100px);
+    visibility: hidden;
+  }
+  
+  .notification.show {
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
+  }
+  
+  .notification.error {
+    background-color: #d9534f;
+  }
     header {
       background: #4CAF50;
       color: #fff;
@@ -157,6 +183,9 @@
   </style>
 </head>
 <body>
+  <div id="notification" class="notification">
+  <span id="notification-message"></span>
+  </div>
   <!-- Nagłówek taki sam jak na stronie głównej -->
   <header>
     <div class="navbar">
@@ -174,12 +203,6 @@
   </header>
 
   <div class="container">
-<!--     <div class="header-actions">
-      <div>
-        <span id="user-greeting-top" style="font-size: 16px; font-weight: bold;"></span>
-      </div>
-      <button id="logout-button" class="logout-btn">Wyloguj</button>
-    </div> -->
 
     <h2 class="section-title">Mój Profil</h2>
     <!-- Formularz danych kontaktowych -->
@@ -341,14 +364,29 @@
     // ------------------------------------------------------------
     // 4. Obsługa wylogowania
     // ------------------------------------------------------------
-    logoutButton.addEventListener('click', async () => {
-    try {
-      await signOut(auth);
-      alert('Zostałeś pomyślnie wylogowany!');
+    function showNotification(message, isError = false) {
+  const notification = document.getElementById('notification');
+  const messageElement = document.getElementById('notification-message');
+  
+  notification.className = isError ? 'notification error' : 'notification';
+  messageElement.textContent = message;
+  notification.classList.add('show');
+  
+  setTimeout(() => {
+    notification.classList.remove('show');
+  }, 3000);
+}
+
+logoutButton.addEventListener('click', async () => {
+  try {
+    await signOut(auth);
+    showNotification('Zostałeś pomyślnie wylogowany!');
+    setTimeout(() => {
       window.location.href = "index.html";
-    } catch (error) {
-      console.error('Błąd wylogowania:', error);
-      alert('Wystąpił błąd podczas wylogowania. Spróbuj ponownie.');
+    }, 1000); // Małe opóźnienie aby użytkownik zobaczył powiadomienie
+  } catch (error) {
+    console.error('Błąd wylogowania:', error);
+    showNotification('Wystąpił błąd podczas wylogowania', true);
   }
 });
 
