--- a/index.html
+++ b/index.html
@@ -210,14 +210,18 @@
       }
     });
 
+     // ------------------------------------------------------------
+    // 3. Funkcja wylogownia
+    // ------------------------------------------------------------
+
     logoutButton.addEventListener('click', async () => {
-    try {
-      await signOut(auth);
-      alert('Zostałeś pomyślnie wylogowany!');
-      window.location.href = "index.html";
-    } catch (error) {
-      console.error('Błąd wylogowania:', error);
-      alert('Wystąpił błąd podczas wylogowania. Spróbuj ponownie.');
+  try {
+    await signOut(auth);
+    // Przekieruj z parametrami
+    window.location.href = "index.html?notification=Zostałeś+pomyślnie+wylogowany!&isError=false";
+  } catch (error) {
+    console.error('Błąd wylogowania:', error);
+    window.location.href = "index.html?notification=Wystąpił+błąd+podczas+wylogowania&isError=true";
   }
 });
     
