--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BKRJ Vet - Klinika Weterynaryjna</title>
   <style>
+    .notification {
+  padding: 15px;
+  margin: 0 auto;
+  max-width: 1200px;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.notification.success {
+  background-color: #dff0d8;
+  color: #3c763d;
+  border: 1px solid #d6e9c6;
+}
+
+.notification.error {
+  background-color: #f2dede;
+  color: #a94442;
+  border: 1px solid #ebccd1;
+}
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -93,6 +114,7 @@
 <body>
 
   <header>
+    <div id="notification" class="notification" style="display: none;"></div>
     <div class="navbar">
       <div class="logo"><h1>BKRJ Vet</h1></div>
       <nav id="nav-bar">
@@ -162,6 +184,7 @@
           czy jest zalogowany użytkownik, i odpowiednio zmodyfikuje menu
        ================================= -->
   <script type="module">
+
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import { getAuth,signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
@@ -214,10 +237,30 @@
     // 3. Funkcja wylogownia
     // ------------------------------------------------------------
 
+    function showNotification() {
+  const urlParams = new URLSearchParams(window.location.search);
+  const notificationText = urlParams.get('notification');
+  const isError = urlParams.get('isError') === 'true';
+  
+  if (notificationText) {
+    const notificationDiv = document.getElementById('notification');
+    notificationDiv.textContent = decodeURIComponent(notificationText.replace(/\+/g, ' '));
+    notificationDiv.style.display = 'block';
+    notificationDiv.className = isError ? 'notification error' : 'notification success';
+    
+    // Automatyczne ukrywanie powiadomienia po 5 sekundach
+    setTimeout(() => {
+      notificationDiv.style.display = 'none';
+    }, 5000);
+  }
+}
+
+// Wywołaj funkcję po załadowaniu strony
+document.addEventListener('DOMContentLoaded', showNotification);
+
     logoutButton.addEventListener('click', async () => {
   try {
     await signOut(auth);
-    // Przekieruj z parametrami
     window.location.href = "index.html?notification=Zostałeś+pomyślnie+wylogowany!&isError=false";
   } catch (error) {
     console.error('Błąd wylogowania:', error);
