--- a/konto.html
+++ b/konto.html
@@ -193,8 +193,8 @@
       <nav id="nav-bar">
         <a href="index.html">Strona główna</a>
         <a href="umow-wizyte.html" id="nav-umow">Umów wizytę</a>
-        <a href="#about">O nas</a>
-        <a href="#contact">Kontakt</a>
+        <a href="index.html#about">O nas</a>
+        <a href="index.html#contact">Kontakt</a>
         <span id="user-greeting" class="user-greeting" style="display: none;"></span>
         <a href="konto.html" id="nav-konto" style="display: none;">Moje Konto</a>
         <button id="logout-button" class="logout-btn" style="margin: 0; padding: 6px 12px;">Wyloguj</button>
