--- a/konto.html
+++ b/konto.html
@@ -364,34 +364,16 @@
     // ------------------------------------------------------------
     // 4. Obsługa wylogowania
     // ------------------------------------------------------------
-    function showNotification() {
-  const urlParams = new URLSearchParams(window.location.search);
-  const notificationText = urlParams.get('notification');
-  const isError = urlParams.get('isError') === 'true';
-  
-  if (notificationText) {
-    const notificationDiv = document.getElementById('notification');
-    notificationDiv.textContent = decodeURIComponent(notificationText.replace(/\+/g, ' '));
-    notificationDiv.style.display = 'block';
-    notificationDiv.className = isError ? 'notification error' : 'notification success';
-    
-    // Automatyczne ukrywanie powiadomienia po 5 sekundach
-    setTimeout(() => {
-      notificationDiv.style.display = 'none';
-    }, 5000);
-  }
-}
 
 // Wywołaj funkcję po załadowaniu strony
-document.addEventListener('DOMContentLoaded', showNotification);
 logoutButton.addEventListener('click', async () => {
   try {
     await signOut(auth);
     // Przekieruj na stronę główną z parametrem w URL
-    window.location.href = "index.html?logout=success";
+    index.html?notification=Zostałeś+pomyślnie+wylogowany!&isError=false
   } catch (error) {
     console.error('Błąd wylogowania:', error);
-    showNotification('Wystąpił błąd podczas wylogowania', true);
+    window.location.href = "index.html?notification=Wystąpił+błąd+podczas+wylogowania&isError=true";
   }
 });
 
